# reading_app_250705

./: .gitignore  CLAUDE.md  README.md
.llm_context/: project-structure.md  tech-stack.md  workflows.md
backend/: alembic.ini  app.py  config.py  main.py  mypy.ini  pyproject.toml  ruff.toml
backend/alembic/: env.py
backend/alembic/versions/: 4f52310fed60_initial_migration.py
backend/api/v1/: __init__.py
backend/app/: __init__.py
backend/app/models/: base.py
backend/app/schemas/: __init__.py
plans/: summary.md
plans/epics/01-project-setup/: TODO.md  design.md
plans/epics/03-document-upload/: design.md
